; ModuleID = '/home/carl/AnghaBench/libgit2/tests/refs/branches/extr_upstream.c_assert_merge_and_or_remote_key_missing.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/refs/branches/extr_upstream.c_assert_merge_and_or_remote_key_missing.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GIT_OBJECT_COMMIT = common dso_local global i32 0, align 4
@GIT_ENOTFOUND = common dso_local global i32 0, align 4
@upstream = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32*, i8*)* @assert_merge_and_or_remote_key_missing to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @assert_merge_and_or_remote_key_missing(i32* %0, i32* %1, i8* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i8* %2, i8** %6, align 8
  %8 = load i32, i32* @GIT_OBJECT_COMMIT, align 4
  %9 = load i32*, i32** %5, align 8
  %10 = call i32 @git_object_type(i32* %9)
  %11 = call i32 @cl_assert_equal_i(i32 %8, i32 %10)
  %12 = load i32*, i32** %4, align 8
  %13 = load i8*, i8** %6, align 8
  %14 = load i32*, i32** %5, align 8
  %15 = call i32 @git_branch_create(i32** %7, i32* %12, i8* %13, i32* %14, i32 0)
  %16 = call i32 @cl_git_pass(i32 %15)
  %17 = load i32, i32* @GIT_ENOTFOUND, align 4
  %18 = load i32*, i32** %7, align 8
  %19 = call i32 @git_branch_upstream(i32* @upstream, i32* %18)
  %20 = call i32 @cl_assert_equal_i(i32 %17, i32 %19)
  %21 = load i32*, i32** %7, align 8
  %22 = call i32 @git_reference_free(i32* %21)
  ret void
}

declare dso_local i32 @cl_assert_equal_i(i32, i32) #1

declare dso_local i32 @git_object_type(i32*) #1

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_branch_create(i32**, i32*, i8*, i32*, i32) #1

declare dso_local i32 @git_branch_upstream(i32*, i32*) #1

declare dso_local i32 @git_reference_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
